kubernetes/argo-cd/projects/production-hm/litellm/kubernetes-manifests/hm-litellm-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hm-litellm-deployment
  namespace: production-hm-litellm
  labels:
    app.kubernetes.io/name: litellm-deployment
    app.kubernetes.io/part-of: production-hm-litellm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hm-litellm
  template:
    metadata:
      labels:
        app: hm-litellm
    spec:
      serviceAccountName: hm-litellm-service-account
      containers:
        - name: litellm
          image: harbor.hongbomiao.com/docker-hub-proxy-cache/litellm/litellm:v1.77.7-stable
          ports:
            - name: litellm
              protocol: TCP
              containerPort: 4000
          command: ["litellm", "--port", "4000", "--config", "/app/config.yaml"]
          volumeMounts:
            - name: litellm-volume
              mountPath: /app/config.yaml
              subPath: config.yaml
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 100m
              memory: 1Gi
      volumes:
        - name: litellm-volume
          configMap:
            name: hm-litellm-config-map
