kubernetes/argo-cd/projects/production-hm/litellm/kubernetes-manifests/hm-litellm-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hm-litellm-service
  namespace: production-hm-litellm
  labels:
    app.kubernetes.io/name: hm-litellm-service
    app.kubernetes.io/part-of: production-hm-litellm
spec:
  type: ClusterIP
  selector:
    app: hm-litellm
  ports:
    - name: litellm
      protocol: TCP
      targetPort: litellm
      port: 80
